patientdoctorrelation tabel oprettet, samt pom udvidet for at minimere risiko for outofmemory ved testkørsel